<resources>
    <string name="app_name">Drone Upload App</string>
    <string name="notification_success">Picture uploaded.</string>
    <string name="notification_progress">Uploading...</string>
    <string name="notification_share_link">Picture link</string>
    <string name="notification_fail">Upload failed.</string>
    <string name="input_title">Title</string>
    <string name="input_description">Description</string>
    <string name="btn_picture">Browse</string>
    <string name="btn_upload">Add</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="userid">UserID</string>

    <string name="login_button">Login</string>
    <string name="loginButtonHint">Username</string>
    <string name="loginTitle">W.V. D.o.T. Drone-Bridge Application</string>
    <string name="backButton">Back</string>
    <string name="nextButton">Next</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="saveButton">Save</string>
    <string name="continueButton">Continue</string>
    <string name="viewReadyButton">View Ready</string>
    <string name="finishButton">Next</string>
    <string name="clearButton">Clear</string>
    <string name="reloadButton">Reload</string>
    <string name="toLoginButton">Back</string>
    <string name="toUploadButton">Upload</string>
    <string name="addImageButton">Add Images</string>
    <string name="toViewOldButton">View Recent</string>
    <string name="navigatePageTitle">Select an Action</string>
    <string name="title_activity_view_recent">ViewRecentActivity</string>
    <string name="recentLabel">Your Recently Uploaded</string>
    <string name="bridgeHint">Bridge ID</string>
    <string name="removeButton">Remove</string>
    <string name="readyButton">Ready for Upload</string>
    <string name="recentButton">Recent Photos</string>
    <string name="updateLabel">Photo Information</string>

    <string name="bridgeSelectLabel">Enter Associated UserID</string>
    <string name="title_activity_ready">ReadyActivity</string>
    <string name="title_activity_image_update">ImageUpdateActivity</string>
</resources>
